--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #282c34;
@@ -19,9 +14,30 @@
   color: white;
 }
 
+.App-logo {
+  animation: App-logo-spin infinite 1s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+
+.Reposing {
+  animation: App-logo-spin infinite 40s linear;
+  height: 30vmin;
+  pointer-events: none;
+}
+
+
+.Working {
+  animation: App-logo-spin infinite 3s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
